--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:8000/api
-REACT_APP_API_CAPTCHA_URL=http://localhost:8000
+REACT_APP_API_URL=https://hwsrv-1105149.hostwindsdns.com/api
+REACT_APP_API_CAPTCHA_URL=https://hwsrv-1105149.hostwindsdns.com
